--- a/betaServis/beta/templates/works.html
+++ b/betaServis/beta/templates/works.html
@@ -11,12 +11,12 @@
 <h2>Меню</h2>
 <table>
 
-{% for betaservis in beta %}
+{% for betaservis in works %}
 <tr>
 
-<td>{{ betaservis.main }}</td>
+
    <td>{{ betaservis.services }}</td>
-    <td>{{ betaservis.works }}</td>
+
     <td>{{ betaservis.forms }}</td>
     </tr><tr>
 <td><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
