добавлена страница forms.html

--- a/betaServis/beta/templates/forms.html
+++ b/betaServis/beta/templates/forms.html
@@ -8,9 +8,9 @@
 
 <table>
 
-{% for betaservistext in betaservist %}
+{% for betaservistext in forms_text %}
         <tr>
-            <td>{{ betaservistext.services_text }}</td>
+            <td>{{ betaservistext.forms_text }}</td>
 
 
         </tr>
