--- a/betaServis/beta/templates/menu.html
+++ b/betaServis/beta/templates/menu.html
@@ -19,7 +19,10 @@
     <td>{{ betaservis.works }}</td>
     <td>{{ betaservis.forms }}</td>
     </tr><tr>
-<td><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
+    <td><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
+    <td><a href="works/{{works.id}}">{{ betaservis.works }}</a></td>
+    <td><a href="forms/{{forms.id}}">{{ betaservis.forms }}</a></td>
+
 </tr>
 {% endfor %}
 </table>
