добавлена страница forms.html

--- a/betaServis/beta/templates/menu.html
+++ b/betaServis/beta/templates/menu.html
@@ -14,11 +14,8 @@
 {% for betaservis in beta %}
 <tr>
 
-<td>{{ betaservis.main }}</td>
-   <td>{{ betaservis.services }}</td>
-    <td>{{ betaservis.works }}</td>
-    <td>{{ betaservis.forms }}</td>
     </tr><tr>
+    <td><a href="main/{{main.id}}">{{ betaservis.main }}</a></td>
     <td><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
     <td><a href="works/{{works.id}}">{{ betaservis.works }}</a></td>
     <td><a href="forms/{{forms.id}}">{{ betaservis.forms }}</a></td>
