добавлена страница forms.html

--- a/betaServis/beta/templates/index.html
+++ b/betaServis/beta/templates/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Betaservis</title>
-</head>
-<body>
-
-privet
-
-<h2>Меню</h2>
-<table>
-
-{% for betaservistext in beta_text %}
-<tr>
-
-
-    <td>{{ betaservistext.main_text }}</td>
-
-<td>{{ betaservistext.services_text }}</td>
-    <td>{{ betaservistext.works_text }}</td>
-    <td>{{ betaservistext.forms_text }}</td>
-    <td>&nbsp;</td>
-
-<td><a href="edit/{{services.id}}">Изменить</a> | <a href="delete/{{services.id}}">Удалить</a></td>
-</tr>
-{% endfor %}
-</table>
-
-
-</body>
-</html>
+{% extends "menu.html" %}
