--- a/betaServis/beta/templates/forms.html
+++ b/betaServis/beta/templates/forms.html
@@ -1,11 +1,13 @@
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+{% extends "menu.html" %}
 <table>
 
 {% for betaservistext in forms_text %}
