--- a/betaServis/beta/templates/services.html
+++ b/betaServis/beta/templates/services.html
@@ -1,8 +1,12 @@
+{% extends "menu.html" %}
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
 
