--- a/betaServis/beta/templates/base.html
+++ b/betaServis/beta/templates/base.html
@@ -16,17 +16,9 @@
 
 <div class="row">
 
+{% block content %}
 
-<table>
-
-
-<tr>
-<td>  {% block content %}
-      {% endblock %} </td>
-</tr>
-
-</table>
-
+{% endblock %}
 </div>
 
 </body>
