--- a/betaServis/beta/templates/menu.html
+++ b/betaServis/beta/templates/menu.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 {% for betaservis in beta %}
-    </tr><tr>
-    <td><a href="main/{{main.id}}">{{ betaservis.main }}</a></td>
-    <td><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
-    <td><a href="works/{{works.id}}">{{ betaservis.works }}</a></td>
-    <td><a href="forms/{{forms.id}}">{{ betaservis.forms }}</a></td>
+<table border = 1 style = "cellpadding: 5; cellspacing:5 ">
+<tr align = center>
+    <td width = "100"><a href="main/{{main.id}}">{{ betaservis.main }}</a></td>
+    <td width = "100"><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
+    <td width = "100"><a href="works/{{works.id}}">{{ betaservis.works }}</a></td>
+    <td width = "100"><a href="forms/{{forms.id}}">{{ betaservis.forms }}</a></td>
+</tr>
+    </table>
 {% endfor %}
 {% endblock %}
