--- a/betaServis/beta/templates/services.html
+++ b/betaServis/beta/templates/services.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 
-<table>
+<table><tr> <td>
+    {% block content %}
+    {% endblock %} </td>
+
+    </td></tr>
 
 {% for betaservistext in betaservist %}
         <tr>
