Добавлены маршруты, вьюхи  и страницы

--- a/betaServis/beta/templates/base.html
+++ b/betaServis/beta/templates/base.html
@@ -17,10 +17,13 @@
 
 <tr align = center>
 
-    <td width = "100"><a href="main/{{main.id}}">{{ betaservis.main }}</a></td>
-    <td width = "100"><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
-    <td width = "100"><a href="works/{{works.id}}">{{ betaservis.works }}</a></td>
-    <td width = "100"><a href="forms/{{forms.id}}">{{ betaservis.forms }}</a></td>
+    <td width = "140"><a href="main/{{main.id}}">{{ betaservis.main }}</a></td>
+    <td width = "140"><a href="services/{{services.id}}">{{ betaservis.services }}</a></td>
+    <td width = "140"><a href="works/{{works.id}}">{{ betaservis.works }}</a></td>
+    <td width = "140"><a href="forms/{{forms.id}}">{{ betaservis.forms }}</a></td>
+    <td width = "140"><a href="contacts/{{contacts.id}}">{{ betaservis.contacts }}</a></td>
+    <td width = "140"><a href="site/{{contacts.id}}">{{ betaservis.site }}</a></td>
+    <td width = "140"><a href="our_friends/{{our_friends.id}}">{{ betaservis.our_friends }}</a></td>
 
 </tr>
 
