--- a/betaServis/beta/templates/services.html
+++ b/betaServis/beta/templates/services.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-{% for betaservistext in betaservist %}
+{% for betaservistext in services_text %}
 <table>
     <tr>
         <td>
