--- a/betaServis/beta/templates/site.html
+++ b/betaServis/beta/templates/site.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-{% for betaservistext in our_friends_text %}
+{% for betaservistext in site_text %}
 <table>
     <tr>
         <td>
-    {{ betaservistext.our_friends_text }}
+    {{ betaservistext.site_text }}
 
         </td>
     </tr>
