добавлена ссылка возврата

--- a/betaServis/beta/templates/base.html
+++ b/betaServis/beta/templates/base.html
@@ -37,6 +37,13 @@
 {%block content%}
 
     {% endblock %}
+
+    <table>
+<tr>
+
+        <td></td><a href="/{{beta.id}}">В начало</a></td>
+</tr>
+    </table>
 </div>
 
 </body>
