--- a/betaServis/beta/templates/index.html
+++ b/betaServis/beta/templates/index.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 
-{% for betaservistext in betaservist %}
+{% for betaservistext in beta %}
 <table>
     <tr>
         <td>
-    {{ betaservistext.services_text }}
+    {{ betaservistext.beta }}
 
         </td>
     </tr>
